tests/NormalTests/paczka1/fuzzy1/76374045.err
Error in line 8: 5MaU2 A25 23,3
Error in line 15: BGj9IhWA S526 35,5
Error in line 14: zmsurZ7 S266 50,5
Error in line 28: BGj9IhWA S331 -1,3
Error in line 30: qH8kng6iJ2 A25 74,8
Error in line 13: 3cUbYh S331 322,9
Error in line 34: 9UqroT1N S331 36,0
